Labs/Istio/7 Mirroring/files/1_services.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: srv
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  namespace: srv
  labels:
    app: service
  name: service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: service
---

apiVersion: v1
kind: Service
metadata:
  namespace: srv
  labels:
    app: logger
  name: logger
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: logger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: srv
  labels:
    app: service
  name: main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service
  template:
    metadata:
      labels:
        app: service
    spec:
      containers:
      - image: przemekmalak/multitool
        name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: srv
  labels:
    app: logger
  name: logger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logger
  template:
    metadata:
      labels:
        app: logger
    spec:
      containers:
      - image: przemekmalak/request-echo:1
        name: logger
