Labs/Istio/7 Mirroring/files/2_virtual_services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mt1
  namespace: srv
spec:
  hosts:
  - service.srv.svc.cluster.local
  http:
  - route:
    - destination:
        host: service.srv.svc.cluster.local
        subset: service
        port:
          number: 8080
      weight: 100
    mirror:
      host: logger.srv.svc.cluster.local
      port: 
        number: 8080
      subset: logger
    mirror_percent: 100
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  namespace: srv
  name: service
spec:
  host: service.srv.svc.cluster.local
  subsets:
  - name: service
    labels:
      app: service
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  namespace: srv
  name: logger
spec:
  host: logger.srv.svc.cluster.local
  subsets:
  - name: logger
    labels:
      app: logger
